syntax = "proto3";
package tutorial;

option go_package = "./internal/model/protobuf";

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}